--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -12,7 +12,7 @@ facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: # your GitHub user name
 # gitlab_username: # your GitLab user name
-ieee_id: # your ieeexplore.ieee.org/author/id
+# ieee_id: # your ieeexplore.ieee.org/author/id
 # inspirehep_id: 1010907 # Inspire HEP author ID
 instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
@@ -20,17 +20,17 @@ instagram_id: # your instagram id
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: # your LinkedIn user name
+linkedin_username:sukhwankang # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
- orcid_id: # your ORCID ID
+# orcid_id: # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 # rss_icon: true # set to true to show the RSS icon
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+# scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
