--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -8,7 +8,7 @@
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
 email: you@example.com # your email address
-facebook_id: # your facebook id
+# facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: # your GitHub user name
 # gitlab_username: # your GitLab user name
@@ -20,10 +20,10 @@ instagram_id: # your instagram id
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username:sukhwankang # your LinkedIn user name
+linkedin_username: sukhwankang # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-# orcid_id: # your ORCID ID
+orcid_id: 0000-0002-5968-1950 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
