--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Sukhwan
-middle_name: (Teddy)
+first_name: Sukhwan (Teddy)
+middle_name: 
 last_name: Kang
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
