--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ first_name: Sukhwan (Teddy)
 middle_name: 
 last_name: Kang
 contact_note: >
-  The best way to reach me is by the LinkedIn.
-  Last updated: Jan, 2025
+  The best way to reach me is by the LinkedIn. 
+  (Last updated: Jan, 2025)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
