--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Untitled 无题 # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_description: a simple whitespace
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
