--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact_note: >
   The best way to reach me is by the LinkedIn. 
   (Last updated: Jan, 2025)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Sukhwan Kang Page
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
