--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,12 @@ middle_name:
 last_name: Kang
 contact_note: >
   The best way to reach me is by the LinkedIn. 
-  (Last updated: Jan, 2025)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Sukhwan Kang Page
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+footer_text: #>
+#  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+#  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+#  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⎍ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
